fix mark up alignment

--- a/style.less
+++ b/style.less
@@ -5,6 +5,7 @@
 html, body, h1, h2, h3, h4, h5, h6, p, pre, a {
   margin: 0;
   padding: 0;
+  font-weight: inherit;
 }
 
 [id="app"] {
